nambahin verifikasi google

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.magnetindustri.com/">
   <meta property="og:image" content="https://www.magnetindustri.com/logo.png">
-
+    google-site-verification: google0d127846d02e734a.html
   <!-- Schema Markup -->
   <script type="application/ld+json">
   {
